umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_cyclohexanecarboxylic-acid.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h#v3" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#v4" "O#n2#v2" "O#h#n2#v"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [4 5 "1"] [5 0 "1"] [0 6 "1"] [6 7 "2"] [6 8 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h#v3" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#h2#v2" "C#v4" "O#n2#v2" "O#h#n2#v"] :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "1"] [4 5 "1"] [5 0 "1"] [0 6 "1"] [6 7 "2"] [6 8 "1"]] :charge 0 :spin "#u0 #s1"}}}
