umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_cyclopropanecarboxylic-acid.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h#v3" "C#h2#v2" "C#h2#v2" "C#v4" "O#n2#v2" "O#h#n2#v"]
      :bonds [[0 1 "1"] [1 2 "1"] [2 0 "1"] [0 3 "1"] [3 4 "2"] [3 5 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h#v3" "C#h2#v2" "C#h2#v2" "C#v4" "O#n2#v2" "O#h#n2#v"]
      :bonds [[0 1 "1"] [1 2 "1"] [2 0 "1"] [0 3 "1"] [3 4 "2"] [3 5 "1"]]}
    :success true}}
