umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_dihydroxyacetone.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["C#h2#v2" "O#h#n2#v" "C#v4" "O#n2#v2" "C#h2#v2" "O#h#n2#v"]
      :bonds [[0 1 :single] [0 2 :single] [2 3 :double] [2 4 :single] [4 5 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["C#h2#v2" "O#h#n2#v" "C#v4" "O#n2#v2" "C#h2#v2" "O#h#n2#v"]
      :bonds [[0 1 :single] [0 2 :single] [2 3 :double] [2 4 :single] [4 5 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
