umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_dimethylformamide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h#v3" "1" "O#n2#v2" "2" "N#n#v3" "3" "C#h3#v" "4" "C#h3#v"} :bonds [["0" "1" "2"] ["0" "2" "1"] ["2" "3" "1"] ["2" "4" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h#v3" "1" "O#n2#v2" "2" "N#n#v3" "3" "C#h3#v" "4" "C#h3#v"} :bonds [["0" "1" "2"] ["0" "2" "1"] ["2" "3" "1"] ["2" "4" "1"]] :charge 0 :spin "#u0 #s1"}}}
