umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_ethyl-acetate.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h3#v" "1" "C#v4" "2" "O#n2#v2" "3" "O#n2#v2" "4" "C#h2#v2" "5" "C#h3#v"} :bonds [["0" "1" "1"] ["1" "2" "2"] ["1" "3" "1"] ["3" "4" "1"] ["4" "5" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h3#v" "1" "C#v4" "2" "O#n2#v2" "3" "O#n2#v2" "4" "C#h2#v2" "5" "C#h3#v"} :bonds [["0" "1" "1"] ["1" "2" "2"] ["1" "3" "1"] ["3" "4" "1"] ["4" "5" "1"]] :charge 0 :spin "#u0 #s1"}}}
