umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_ethyl-formate.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h3#v" "1" "C#h2#v2" "2" "O#n2#v2" "3" "C#h#v3" "4" "O#n2#v2"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h3#v" "1" "C#h2#v2" "2" "O#n2#v2" "3" "C#h#v3" "4" "O#n2#v2"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"] [3 4 "2"]] :charge 0 :spin "#u0 #s1"}}}
